--- a/package.json
+++ b/package.json
@@ -14,10 +14,17 @@
     "react-dom": "$react-dom"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.0",
+    "@radix-ui/react-label": "^2.1.1",
+    "@tabler/icons-react": "^3.26.0",
+    "clsx": "^2.1.1",
+    "framer-motion": "^11.15.0",
+    "motion": "^11.15.0",
     "next": "15.1.3",
     "next-auth": "^5.0.0-beta.25",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "tailwind-merge": "^2.6.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
